--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -31,7 +31,7 @@
                         {% endif %}
                       </ul>
                       ">
-                    {{ helper.render_user_img-thumbnail(account, upload_method, style="height:90px; width:90px;") }}
+                    {{ helper.render_user_thumbnail(account, upload_method, style="height:90px; width:90px;") }}
             </a>
           </li>
           {% endfor %}
