--- a/templates/account/password.html
+++ b/templates/account/password.html
@@ -4,6 +4,8 @@
 {% import "account/_helpers.html" as helper %}
 
 {% block content %}
+        <div class="container container-main">
+
 {% from "_formhelpers.html" import render_field %}
 <div class="row">
     <div class="col-md-3">
@@ -11,19 +13,20 @@
     </div>
     <div class="col-md-9">
         <h1><strong>{{current_user.fullname}}</strong>: {{ _('Change your Password') }}</h1>
-        <form method="post" class="form-horizontal" action="{{ url_for('account.change_password', name=current_user.name) }}">
+        <form method="post" role="form" action="{{ url_for('account.change_password', name=current_user.name) }}">
             <fieldset>
                 {{ form.id }}
                 {{ form.hidden_tag() }}
-                {{ render_field(form.current_password, placeholder= _('my current password') ) }}
-                {{ render_field(form.new_password, placeholder= _('my new password') ) }}
-                {{ render_field(form.confirm, placeholder= _('my new password again') ) }}
-                <div class="form-actions">
-                    <input type="submit" value="Save the changes" class="btn btn-primary btn-lg" text={{ _('Save the Changes')}} />
-                    <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn">{{ _('Cancel') }}</a>
+                {{ render_field(form.current_password, placeholder= _('Current password'), class="form-control" ) }}
+                {{ render_field(form.new_password, placeholder= _('New password'), class="form-control" ) }}
+                {{ render_field(form.confirm, placeholder= _('Confirm new password'), class="form-control" ) }}
+                <div class="pull-right" role="group">
+                    <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
+                    <input type="submit" value="{{_('Save changes')}}" class="btn btn-success" />
                 </div>
             </fieldset>
         </form>
     </div>
 </div>
+        </div>
 {% endblock %}
