--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -71,8 +71,15 @@ input[type="color"]:focus,
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(139, 191, 54, 0.6);
 }
 
+.remove-padding {
+  padding: 0px !important;
+}
 .remove-padding-left {
-  padding-left: 0px;
+  padding-left: 0px !important;
+}
+
+.remove-padding-bottom {
+  padding-bottom: 0px !important;
 }
 
 .padding-top {
@@ -90,6 +97,11 @@ input[type="color"]:focus,
 .form-control {
   padding: 12px 15px;
   height: auto;
+}
+
+.form-horizontal .form-group {	
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
 div.white-rounded {
@@ -115,6 +127,11 @@ body {
   width: 100%;
   font-family: 'Source Sans Pro', sans-serif;
   color: #404040; 
+}
+
+hr {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .container-fluid {
@@ -838,6 +855,11 @@ ul.users li a {
   .footer-links {
   display: inline;
 }
+
+.img-dialog {
+  width: 500px;
+}
+
 }
 
 /*
@@ -887,6 +909,10 @@ p.muted {
 p.score {
   margin-top: -20px;
   font-size: 28px;
+}
+
+.col-sm-3.control-label {
+  line-height: 3;
 }
 
 /* Background colours
@@ -1130,20 +1156,24 @@ justify-content: center;
  * Alert Messages
  */
  
- .alert {
-  margin-top: 100px;
-  margin-bottom: -100px;
- }
-
 .alert-messages {
+  position: fixed;
+  top: 80px;
   width: 50%;
   margin-left: 25%;
+  z-index:110;
 }
 
 .alert-error {
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
+}
+
+.alert-message {
+  color: #31708f;	
+  background-color: #d9edf7;
+  border-color: #bce8f1;
 }
 
 /**
@@ -1163,4 +1193,73 @@ justify-content: center;
 
 .profile-image {
   max-height: 300px;
+}
+
+.img-overlay-container {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
+.img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    padding: 40%;
+    opacity: 0;
+    -webkit-transition: opacity .2s;
+    -moz-transition: opacity .2s;
+    -ms-transition: opacity .2s;
+    -o-transition: opacity .2s;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+.img-overlay .fa {
+  padding-left: 5px;
+}
+
+.img-overlay:hover {
+  opacity: 1;
+  transform: none;
+}
+
+.jcrop-holder div
+{
+    -webkit-border-radius: 50% !important;
+    -moz-border-radius: 50% !important;
+    border-radius: 50% !important;
+}
+
+.jcrop-keymgr {
+  display: none !important;
+}
+
+.jcrop-holder {
+  display:block;
+  margin-right:auto;
+  margin-left:auto
+}
+
+.loading-overlay {
+  position:fixed;
+  top:0;
+  left:0;
+  background:rgba(0,0,0,0.6);
+  z-index:105;
+  width:100%;
+  height:100%;
+  display: none;
+  
+}
+
+.loading-text {
+  color: white;
+  text-align: center;
+  font-size: 36px;
+  height: 100%;
 }
