--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -42,10 +42,7 @@
                   </div>
               </form>
               <div class="padding-top">
-                <p class="text-center muted">
-                    {{ _('By clicking the') }} <strong>{{ _('Sign in') }}</strong> {{ _('button you are agreeing to
-                    our') }} <a href={{url_for('help.tos')}}>{{ _('terms of use') }}</a>.
-                </p>
+                <p class="text-center muted">{{ _('By clicking the') }} <strong>{{ _('Sign in') }}</strong> {{ _('button you are agreeing to our') }} <a href={{url_for('help.tos')}}>{{ _('terms of use') }}</a>.</p>
               </div>
               <hr>
             </div>
@@ -57,6 +54,7 @@
               <a href="{{ url_for('account.register') }}" class="btn btn-primary"><i class="icon glyphicon glyphicon-white icon-user"></i>{{ _(' Create a new account') }}</a>
           </div>
       </div>
-            
-      </div>
+  </div>
+    
+    
 {% endblock %}
