--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -245,12 +245,12 @@ function imgError(image) {
 {% macro render_app_thumbnail(app, upload_method, id, class, style) %}
 {% if app.info.container %}
     {% if upload_method == 'rackspace'%}
-    <img id="{{id}}" class="{{class}}" width="{{width}}" src="{{ url_for('rackspace', filename=app.info.img-thumbnail, container=app.info.container)}}" style="{{style}}" onerror="imgError(this);">
+    <img id="{{id}}" class="{{class}}" width="{{width}}" src="{{ url_for('rackspace', filename=app.info.thumbnail, container=app.info.container)}}" style="{{style}}" onerror="imgError(this);">
     {% else %}
-    <img id="{{id}}"  class="{{class}}" width="{{width}}" src="{{ url_for('uploads.uploaded_file', filename=(app.info.container + '/' + app.info.img-thumbnail))}}" style="{{style}}" onerror="imgError(this);">
+    <img id="{{id}}"  class="{{class}}" width="{{width}}" src="{{ url_for('uploads.uploaded_file', filename=(app.info.container + '/' + app.info.thumbnail))}}" style="{{style}}" onerror="imgError(this);">
     {% endif %}
-{% elif app.info.img-thumbnail %}
-    <img id="{{id}}" class="{{class}}" width="{{width}}" src="{{app.info.img-thumbnail}}" style="{{style}}" onerror="imgError(this);">
+{% elif app.info.thumbnail %}
+    <img id="{{id}}" class="{{class}}" width="{{width}}" src="{{app.info.thumbnail}}" style="{{style}}" onerror="imgError(this);">
 {% else %}
     <img id="{{id}}" class="{{class}}" width="{{width}}" src="{{url_for('static', filename='img/placeholder.project.png')}}" style="{{style}}">
 {% endif %}
@@ -259,12 +259,12 @@ function imgError(image) {
 {% macro render_url_thumbnail(app, upload_method) %}
 {% if app.info.container %}
     {% if upload_method == 'rackspace'%}
-    {{ url_for('rackspace', filename=app.info.img-thumbnail, container=app.info.container)}}"
+    {{ url_for('rackspace', filename=app.info.thumbnail, container=app.info.container)}}"
     {% else %}
-    {{ url_for('uploads.uploaded_file', filename=(app.info.container + '/' + app.info.img-thumbnail))}}
+    {{ url_for('uploads.uploaded_file', filename=(app.info.container + '/' + app.info.thumbnail))}}
     {% endif %}
-{% elif app.info.img-thumbnail %}
-    {{app.info.img-thumbnail}}"
+{% elif app.info.thumbnail %}
+    {{app.info.thumbnail}}"
 {% else %}
 {{url_for('static', filename='img/placeholder.project.png')}}"
 {% endif %}
