--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="container-padded remove-padding-bottom">
-    <section class="mid-grey">
+    <section class="mid-grey pattern-brushed box-shadow-grey">
         <div class="container padding-top">
                 {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                     {{ privacy.render_lock_page() }}
@@ -20,17 +20,17 @@
         </div>
     </section>
     
-                    {% if apps_created %}    
+    {% if apps_created %}    
                         
-    <section id="created-apps white" style="margin-top:10px;">
+    <section id="created-apps" class="white pattern-white-wall-2x">
         {{render_grid_apps(apps_created, "Created Projects", upload_method)}}
     </section>
                     {% endif %}
                         
                     {% if apps %}    
                         
-    <section id="contributed-apps white" style="margin-top:10px;">
-                            {{render_grid_apps(apps, "Contributions", upload_method)}}
+    <section id="contributed-apps" class="white pattern-white-wall-2x">
+        {{render_grid_apps(apps, "Contributions", upload_method)}}
     </section>
                     {% endif %}
                 
