--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -19,7 +19,7 @@
         </div>
     </section>
                    
-    <section class="mid-grey">
+    <section class="mid-grey pattern-brushed">
         <div class="container container-padded">
             <div class="col-md-11">
                 <h1>{{ _('Technology') }}</h1>
