Footer alignment fixed

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,28 +1,39 @@
- 
 <div class="container">
     <div class="row center">
+        <div class="col-sm-3 vcenter sticky-footer-col">
+            <a href="http://bl.uk/">
+                <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
+            </a>
+        </div>
+        
+        <div class="col-sm-6 vcenter hcenter sticky-footer-col">
+        {% if not enforce_privacy %}
       
-      <div class="col-sm-3 vcenter sticky-footer-col">
-        <a href="http://bl.uk/"><img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
-      </div>
-      
-      <div class="col-sm-6 vcenter sticky-footer-col">
-      {% if not enforce_privacy %}
-      <div class="row">
-        <div id="footer_links">
-            <ul>
-              <li><i class="fa fa-envelope"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
-              <li><i class="fa fa-twitter"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
-              <li><i class="fa fa-info-circle"></i> <a href="/about">About</a></li>
-            </ul>
-      </div>
-  </div>
-    {% endif %}
-    </div>
-      
-      <div class="col-sm-3 vcenter sticky-footer-col">
-        <a href="http://pybossa.com/"><img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}"></a>
-      </div>
-      
+            <div class="row">
+                <div id="footer_links">
+                    <ul>
+                        <li>
+                            <i class="fa fa-envelope"></i>
+                            <a href="mailto:{{contact_email}}">{{ _('Email') }}</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-twitter"></i>
+                            <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-info-circle"></i>
+                            <a href="/about">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        {% endif %}
+        </div>
+        
+        <div class="col-sm-3 vcenter sticky-footer-col">
+            <a href="http://pybossa.com/">
+                <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}">
+            </a>
+        </div>
     </div>
 </div>
